changes in porfolio
